--- a/70_pf/tourist2/sub/join.html
+++ b/70_pf/tourist2/sub/join.html
@@ -7,10 +7,10 @@
     <title>TOURIST IN TOUR</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.min.js"></script>
-    <script src="/w0310/70_pf/tourist2/js/slider.js"></script>
-    <script src="/w0310/70_pf/tourist2/js/nav.js"></script>
+    <script src="/70_pf/tourist2/js/slider.js"></script>
+    <script src="/70_pf/tourist2/js/nav.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.css">
-    <link rel="stylesheet" href="/w0310/70_pf/tourist2/css/main.css">
+    <link rel="stylesheet" href="/70_pf/tourist2/css/main.css">
 </head>
 
 <body>
@@ -18,13 +18,12 @@
     <header id="header">
         <div class="box_inner">
             <div class="util">
-                <a href="/w0310/70_pf/tourist2/sub/login.html">로그인</a>
-                <a href="/w0310/70_pf/tourist2/sub/join.html">회원가입</a>
+                <a href="/70_pf/tourist2/sub/login.html">로그인</a>
+                <a href="/70_pf/tourist2/sub/join.html">회원가입</a>
             </div>
             <div class="nav_outer_box">
                 <h1 class="logo">
-                    <a href="/w0310/70_pf/tourist2/index.html"><img src="https://picsum.photos/id/400/270/40"
-                            alt="로고"></a>
+                    <a href="/70_pf/tourist2/index.html"><img src="https://picsum.photos/id/400/270/40" alt="로고"></a>
                 </h1>
                 <nav class="gnb">
                     <div class="nav_bg"></div>
@@ -37,13 +36,13 @@
                         </li>
                         <li><a href="#">고객센터</a>
                             <ul class="sub">
-                                <li><a href="/w0310/70_pf/tourist2/sub/notice_list.html">공지사항</a></li>
+                                <li><a href="/70_pf/tourist2/sub/notice_list.html">공지사항</a></li>
                                 <li><a href="#">문의하기</a></li>
                             </ul>
                         </li>
                         <li><a href="#">상품투어</a>
                             <ul class="sub">
-                                <li><a href="/w0310/70_pf/tourist2/sub/program.html">프로그램 소개</a></li>
+                                <li><a href="/70_pf/tourist2/sub/program.html">프로그램 소개</a></li>
                                 <li><a href="#">여행자료</a></li>
                             </ul>
                         </li>
@@ -60,8 +59,33 @@
     </header>
 
     <!-- 섹션 -->
-    
-    
+
+    <!-- side menu -->
+    <aside class="quick_area">
+        <ul class="quick_list">
+            <li>
+                <a href="tel:010-1234-5678">
+                    <h3>전화 문의</h3>
+                    <p>010-1234-5678</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <h3>카카오톡</h3>
+                    <p>1:1 상담</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <h3>오시는 길</h3>
+                </a>
+            </li>
+        </ul>
+        <p class="to_the_top">
+            <a href="#top" class="s_point"><i class="fa-solid fa-caret-up"></i>TOP</a>
+        </p>
+    </aside>
+
     <!-- 푸터 -->
     <footer>
         <div class="box_inner">
