--- a/70_pf/tourist2/sub/join.html
+++ b/70_pf/tourist2/sub/join.html
@@ -58,7 +58,46 @@
         </div><!-- //.box_inner -->
     </header>
 
-    <!-- 섹션 -->
+    <!-- 섹션1 -->
+    <!-- 섹션2 -->
+    <div>
+        <p>* 필수입력으로 반드시 입력하셔야 합니다.</p>
+        <form action="" method="post">
+            <ul>
+                <li>
+                    <label for=""><span>*</span>이메일</label>
+                    <input type="text">@<input type="text">
+                    <select name="" id="">
+                        <option value="">직접입력</option>
+                        <option value="naver">naver.com</option>
+                        <option value="google">google.com</option>
+                    </select>
+                </li>
+                <li>
+                    <label for=""><span>*</span>작성자명</label>
+                </li>
+                <li>
+                    <label for=""><span>*</span>비밀번호</label>
+                </li>
+                <li>
+                    <label for=""><span>*</span>비밀번호 확인</label>
+                </li>
+                <li>
+                    <label for=""><span>*</span>연락처</label>
+                </li>
+                <li>
+                    <label for="">성별</label>
+                </li>
+                <li>
+                    <label for="">개인정보 활용동의</label>
+                </li>
+                <li>
+                    <label for="">문의내용</label>
+                </li>
+            </ul>
+
+        </form>
+    </div>
 
     <!-- side menu -->
     <aside class="quick_area">
